@@ -3,7 +3,8 @@
 === New features
 
 === Bugfixes
-* better handling and error messages for malformed cucumber.yml files (#117, Ben Mabey) 
+* Provide helpful and non-confusing error message when specified profile is blank. (#118, Ben Mabey)
+* Improve handling and error messages for malformed cucumber.yml files. (#117, Ben Mabey) 
 * document :x run option in command line help (#114, Aslak Hellesøy)
 
 === Removed features
